# fnm-binstall-test

./: Cargo.toml
.github/workflows/: release.yml
