[package]
name = "fnm-binstall-test"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/ahaoboy/fnm-binstall-test"
license = "MIT"
description = "fnm-binstall-test"
homepage = "https://github.com/ahaoboy/fnm-binstall-test"
authors = ["ahaoboy"]

[dependencies]


[[bin]]
name = "fnm"


[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-windows"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos"


[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux"
