[package]
name = "fnm-binstall-test"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/ahaoboy/fnm-binstall-test"
license = "MIT"
description = "fnm-binstall-test"
homepage = "https://github.com/ahaoboy/fnm-binstall-test"
authors = ["ahaoboy"]

[dependencies]


[[bin]]
name = "fnm"

[package.metadata.binstall]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/fnm-windows"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/fnm-macos"


[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/fnm-linux"
